# IaC

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md
deployment/docker/: Dockerfile.frontend  docker-entrypoint.sh  nginx.conf
deployment/oci-deployment/: README.md  pyproject.toml
deployment/oci-deployment/configs/: dev.env  prod.env  staging.env
deployment/oci-deployment/scripts/: cleanup.py  deploy.py
deployment/oci-deployment/src/oci_deploy/: __init__.py  cli.py  config.py  containers.py  networking.py  storage.py
deployment/oci-deployment/tests/: test_cli.py  test_config.py  test_containers.py  test_storage.py
docs/: README.md  ToDos.md
docs/specs/: IaC_python.md
